pkg/controller/appdefinition/testdata/router/expected.yaml.d/appinstance.yaml
kind: AppInstance
apiVersion: internal.acorn.io/v1
metadata:
  name: app-name
  namespace: app-namespace
  uid: 1234567890abcdef
spec:
  image: test
  publishMode: all
status:
  namespace: app-created-namespace
  appImage:
    id: test
  appSpec:
    routers:
      router-name:
        routes:
          - pathType: exact
            path: /foo
            targetServiceName: foo-target
            targetServicePort: 1234
          - pathType: prefix
            path: /zzzz
            targetServiceName: zzz-target
            targetServicePort: 8080
  conditions:
    - type: defined
      reason: Success
      status: "True"
      success: true
---
