pkg/controller/appdefinition/testdata/router/expected.yaml.d/configmap.yaml
kind: ConfigMap
apiVersion: v1
metadata:
  name: router-name-5f5b2f6b
  namespace: app-created-namespace
data:
  config: |
    server {
    listen 8080;
    location = /foo {
      proxy_pass http://foo-target:80;
    }
    location = /zzzz {
      proxy_pass http://zzz-target:80;
    }
    location /zzzz/ {
      proxy_pass http://zzz-target:80;
    }
    }
