pkg/controller/appdefinition/testdata/router/expected.yaml.d/pdb.yaml
kind: PodDisruptionBudget
apiVersion: policy/v1
metadata:
  name: router-name
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/router-name": "router-name"
    "acorn.io/managed": "true"
spec:
  selector:
    matchLabels:
      "acorn.io/app-namespace": "app-namespace"
      "acorn.io/app-name": "app-name"
      "acorn.io/router-name": "router-name"
      "acorn.io/managed": "true"
  maxUnavailable: 25%
