pkg/controller/appdefinition/testdata/router/expected.yaml.d/service.yaml
kind: ServiceInstance
apiVersion: internal.acorn.io/v1
metadata:
  name: router-name
  namespace: app-created-namespace
  labels:
    acorn.io/app-name: app-name
    acorn.io/app-namespace: app-namespace
    acorn.io/managed: "true"
    acorn.io/router-name: router-name
    "acorn.io/public-name": "app-name.router-name"
spec:
  appName: app-name
  appNamespace: app-namespace
  publishMode: all
  default: true
  routes:
  - pathType: exact
    path: /foo
    targetServiceName: foo-target
    targetServicePort: 1234
  - pathType: prefix
    path: /zzzz
    targetServiceName: zzz-target
    targetServicePort: 8080
  labels:
    acorn.io/app-name: app-name
    acorn.io/app-namespace: app-namespace
    acorn.io/managed: "true"
    acorn.io/router-name: router-name
  ports:
  - name: "80"
    port: 80
    publish: true
    protocol: http
    targetPort: 8080
  containerLabels:
    acorn.io/app-name: app-name
    acorn.io/router-name: router-name
    acorn.io/app-namespace: app-namespace
    acorn.io/managed: "true"
