pkg/controller/appdefinition/testdata/router/expected.yaml.d/serviceaccount.yaml
kind: ServiceAccount
apiVersion: v1
metadata:
  name: router-name
  namespace: app-created-namespace
  labels:
    acorn.io/app-name: app-name
    acorn.io/app-namespace: app-namespace
    acorn.io/managed: "true"
    acorn.io/router-name: router-name
